tests/parsing/smtlib/v2.6/errors/108_reset-assertions_unclosed_1.expected
File "tests/parsing/smtlib/v2.6/errors/108_reset-assertions_unclosed_1.smt2", line 1, character 18-19:
1 | (reset-assertions _)
                      ^
Error while parsing a reset-assertions command, read the reserved word '_',
      but expected a closing parenthesis.
